[package]
name = "roxy"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.6", default-features = false, features = ["http1", "http2", "original-uri", "tokio"] }
hyper = "0.14"
rustls = "0.20"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }
toml = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
